# game_server_deployment

gameproject_All/Sample/: CMakeLists.txt  hello_world.c
gameproject_All/Sample2/: CMakeLists.txt  main.c
gameproject_All/Sample3/: CMakeLists.txt
gameproject_All/Sample3/modules/: module_a.c  module_a.h
gameproject_All/Sample3/utils/: CMakeLists.txt  convert.c
gameproject_All/container_mnger/: main.cpp
gameproject_All/docker_try/: Dockerfile  a.out  echo_tcp.c  echo_tcp_static
gameproject_All/gameProject/: AOIWorld.cpp  AOIWorld.h  GameChannel.cpp  GameChannel.h  GameMsg.cpp  GameMsg.h  GameProtocol.cpp  GameProtocol.h  GameRole.cpp  GameRole.h  RandomName.cpp  RandomName.h  ZinxTimer.cpp  ZinxTimer.h  main.cpp  makefile
gameproject_All/login_server/: a.out  check_user.sh  container_mnger  create_room.sh  login_cgi  login_cgi.cpp  reg_cgi  reg_cgi.cpp  register.html  room_opt.thrift  user  user_opt.cpp  user_opt.h  userfile
gameproject_All/setup/: setup.iss
gameproject_All/test_thrift/: calculate.cpp  calculate.h  main.cpp  plus.thrift  plus_constants.cpp  plus_constants.h  plus_types.cpp
笔记/: 学习阶段.md
笔记/2 游戏业务实现/: 1 业务需求分析.md  10 业务类 实现移动.md  11 业务类 实现随机位置.md  12 业务类 实现服务器关闭.md  13 业务类 实现随机名字.md  14 守护进程.md  15 进程监控.md  16 存储当局玩家姓名及redis实现.md  17 Redis和hiredis.md  18 makefile编写.md  19 游戏业务总结.md  2 游戏服务分层.md  3 游戏通道层实现.md  4 消息类实现.md  5 协议层实现.md  6 游戏架构流程整理.md  7 业务类实现- AOI算法.md  8 业务类 结合AOI 玩家上下线功能.md  9 业务类 实现聊天.md
笔记/3 框架实现/: 1 Zinx实现- 简单场景.md  10 客户端的tcp阻塞情况解决.md  11 框架分发安装.md  12 框架总结.md  8 框架代码分析.md  9 工厂类 设计TCP通道类.md  zinx框架.xmind
(+104 files in other folders)
